[package]
name = "sickle_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sickle_math = { path = "../sickle_math" }
sickle_macros = { path = "../sickle_macros" }

bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_reflect = { version = "0.13" }
